--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         rel="stylesheet"/>
 
         
-    <title>VERDÃO</title>
+    <title>TIMÃO</title>
 </head>
 
 <body>
-   <center><header>PALMEIRAS FLIX</header></center> 
+   <center><header>CORINTHIANS FLIX</header></center> 
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1><N>PALMEIRAS</N></h1>
+            <h1><N>CORINTHIANS</N></h1>
             <p>MELHORES JOGOS</p>
         </div>
 
@@ -27,7 +27,7 @@
     </section>
 
     <section class="categoria">
-        <center><h2>Explicações e Fenomenos</h2></center>
+        <center><h2>Jogos Mais Bonitos e Esforçados do Timão</h2></center>
         <div class="categoria-videos">   
             <a href="https://www.youtube.com/watch?v=nCHh10awP3I">
                 <img src="https://img.youtube.com/vi/nCHh10awP3I/maxresdefault.jpg" />
