--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <section class="categoria">
         <center><h2>Jogos Mais Bonitos e Esforçados do Timão</h2></center>
         <div class="categoria-videos">   
-            <a href="https://www.youtube.com/watch?v=nCHh10awP3I">
-                <img src="https://img.youtube.com/vi/nCHh10awP3I/maxresdefault.jpg" />
+            <a href="https://youtu.be/EDyLszwMfiA?feature=shared">
+                <img src="https://img.youtube.com/vi/EDyLszwMfiA/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=Z8YtuRj5p20">
                 <img src="https://img.youtube.com/vi/Z8YtuRj5p20/maxresdefault.jpg" />
