--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <a href="https://youtu.be/EDyLszwMfiA?feature=shared">
                 <img src="https://img.youtube.com/vi/EDyLszwMfiA/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Z8YtuRj5p20">
-                <img src="https://img.youtube.com/vi/Z8YtuRj5p20/maxresdefault.jpg" />
+            <a href="https://youtu.be/8M8P2MKM2Cw?feature=shared">
+                <img src="https://img.youtube.com/vi/8M8P2MKM2Cw/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=lv7fQkNNn7U">
                 <img src="https://img.youtube.com/vi/lv7fQkNNn7U/maxresdefault.jpg" />
