--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             <a href="https://youtu.be/8M8P2MKM2Cw?feature=shared">
                 <img src="https://img.youtube.com/vi/8M8P2MKM2Cw/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=lv7fQkNNn7U">
-                <img src="https://img.youtube.com/vi/lv7fQkNNn7U/maxresdefault.jpg" />
+            <a href="https://youtu.be/M0UAaHrdrm0?feature=shared">
+                <img src="https://img.youtube.com/vi/M0UAaHrdrm0/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=PHdrLRcOGCA">
-                <img src="https://img.youtube.com/vi/LINK_AQUI/maxresdefault.jpg" />
+            <a href="https://youtu.be/rsDf9E1RxYU?feature=shared">
+                <img src="https://img.youtube.com/vi/rsDf9E1RxYU/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=1djhtYSs50U">
                 <img src="https://img.youtube.com/vi/1djhtYSs50U/maxresdefault.jpg" />
