--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <a href="https://youtu.be/rsDf9E1RxYU?feature=shared">
                 <img src="https://img.youtube.com/vi/rsDf9E1RxYU/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=1djhtYSs50U">
-                <img src="https://img.youtube.com/vi/1djhtYSs50U/maxresdefault.jpg" />
+            <a href="https://youtu.be/OJmY43QDhVo?feature=shared">
+                <img src="https://img.youtube.com/vi/OJmY43QDhVo/maxresdefault.jpg" />
             </a>
         </div>
     </section>
